# game-of-life

./: Cargo.toml  package-lock.json  package.json  rust-toolchain
benches/: bench.rs~
src/: lib.rs
tests/: web.rs
