[package]
name = "game-of-life"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["console_error_panic_hook"]

# wasm-pack requires following libs
[lib]
crate-type = ["cdylib", "rlib"]
#crate-type = ["rlib"]

[dependencies]
wasm-bindgen = "0.2.63"
console_error_panic_hook = { version = "0.1.6", optional = true }
wee_alloc = { version = "0.4.5", optional = true }
js-sys = "0.3"
fixedbitset = "0.4.0"

[dependencies.web-sys]
version = "0.3"
features = [
    "console",
]

[dev-dependencies]
wasm-bindgen-test = "0.3.13"
# wasm-bindgen-test = "0.2"

[profile.release]
lto = true
opt-level = "z"